fix(Dialog): add minimum z-index to shim

--- a/src/Dialog/index.scss
+++ b/src/Dialog/index.scss
@@ -11,6 +11,7 @@
   align-items: center;
   min-height: 100vh;
   padding: var(--space-default); /* create space around viewport edges */
+  z-index: 2;
 }
 
 .nds-dialog {
